--- a/rtc-remote-client-slave/package.json
+++ b/rtc-remote-client-slave/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "build": "npx electron-rebuild -f -m node_modules/robotjs",
-    "start": "npm run build && ./node_modules/.bin/electron .",
-    "export": "npm run build && CSC_IDENTITY_AUTO_DISCOVERY=false ./node_modules/.bin/electron-builder --mac"
+    "start": "electron .",
+    "deploy:mac-x64": "lectron-builder --mac --x64",
+    "deploy:mac-arm": "electron-builder --mac --arm64",
+    "deploy:win32": "electron-builder --win",
+    "deploy:win64": "electron-builder --win --x64"
   },
   "author": "",
   "license": "ISC",
@@ -14,14 +16,11 @@
     "electron-log": "^5.0.0",
     "mathjs": "^8.1.0",
     "node-gyp": "^7.0.0",
-    "robotjs": "^0.6.0",
-    "screenshot-desktop": "^1.12.3",
-    "sharp": "^0.32.6",
     "socket.io-client": "^3.0.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "electron": "8.5.2",
+    "electron": "^11.5.0",
     "electron-builder": "23.0.2"
   }
 }
